# caiff

./: Makefile  README.md
array/: '  array.c  run.sh
array/asmstuff/: asmarray.c
dynamic_array/: a.out  dynamic_array.cpp
linked_list/: linked_list.c  run.sh
src/array/: CMakeLists.txt
src/circular_buffer/: CMakeLists.txt  circular_buffer.c
src/doubly_linked_list/: CMakeLists.txt  doubly_linked_list.c
src/dynamic_array/: CMakeLists.txt  stack_dynamic_array.cpp
src/dynamic_circular_buffer/: CMakeLists.txt  dynamic_circular_buffer.c
src/fast_circular_buffer/: CMakeLists.txt  fast_circular_buffer.cpp
src/fifo_queue/: CMakeLists.txt  fifo_queue.cpp
src/linked_list/: CMakeLists.txt  linked_list.c
src/stack/: CMakeLists.txt  stack.c
